cargo-up/tests/snapshots/rename_variants__utils__rename_variants.snap
---
source: tests/utils.rs
expression: file_content
---
use upgradee::Enum;
use Enum::*;

type E = Enum;

fn main() {
    let a = Enum::Pineapple;
    s(&a);

    let b = E::Pineapple;
    t(&b);

    if let Enum::Pineapple = b {}

    let mut e = Enum::Berry(8);

    if let Enum::Berry(g) = e.clone() {}
    if let Enum::Berry(ref mut g) = e {}

    let mut f = Enum::Papaya { size: 10 };

    if let Enum::Papaya { size } = e.clone() {}
}

fn s(v: &Enum) -> Option<bool> {
    match v {
        Pineapple => Some(true),
        Berry(_) => Some(false),
        Papaya { .. } => Some(false),
        _ => None,
    }
}

fn t(v: &Enum) -> Option<bool> {
    if let Pineapple = v {
        Some(true)
    } else if let Berry(g) = v {
        Some(false)
    } else if let Papaya { size } = v {
        Some(false)
    } else {
        None
    }
}

